# Firelink

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  pyproject.toml
FirelinkCore/: CMakeLists.txt
FirelinkCore/CMake/: FirelinkModules.cmake
FirelinkCore/include/Firelink/: BaseHook.h  BinaryReadWrite.h  BinaryValidation.h  Collections.h  Export.h  Logging.h  MemoryUtils.h  Pointer.h  Process.h
FirelinkCore/pybind/: CMakeLists.txt
FirelinkCore/pybind/FirelinkCore/: CMakeLists.txt  pyrelink_core.cpp  pyrelink_core.pyi  pyrelink_core_binder.cpp  pyrelink_core_dcx.cpp  pyrelink_core_dds.cpp  pyrelink_core_image_import_manager.cpp  pyrelink_core_tpf.cpp
FirelinkCore/pybind/FirelinkFLVER/: CMakeLists.txt  pyrelink_flver.cpp  pyrelink_flver.pyi  pyrelink_texture_finder.cpp
FirelinkCore/src/: CMakeLists.txt  dllmain.cpp
FirelinkCore/src/Firelink/: BaseHook.cpp  BaseHook.h  BinaryReadWrite.cpp  BinaryReadWrite.h  BinaryValidation.h  CMakeLists.txt  Collections.cpp  Collections.h  Logging.cpp  Logging.h  MemoryUtils.cpp  MemoryUtils.h  Pointer.cpp  Pointer.h  Process.cpp  Process.h
FirelinkCore/src/FirelinkCore/: CMakeLists.txt
FirelinkCore/src/FirelinkCore/include/FirelinkCore/: BaseHook.h  BinaryReadWrite.h  BinaryValidation.h  Binder.h  Collections.h  DCX.h  DDS.h  DevTools.h  Endian.h  GameFile.h  GameType.h  HKX.h  ImageImportManager.h  Logging.h  MemoryUtils.h  Oodle.h  Paths.h  Pointer.h  Process.h  TPF.h
FirelinkCore/src/FirelinkCore/src/: BaseHook.cpp  BinaryReadWrite.cpp  Binder.cpp  Collections.cpp  DCX.cpp  DDS.cpp  DevTools.cpp  HKX.cpp  ImageImportManager.cpp  Logging.cpp  MemoryUtils.cpp  Oodle.cpp  Paths.cpp  Pointer.cpp  Process.cpp  TPF.cpp  dllmain.cpp  pch.h
FirelinkCore/src/FirelinkCore/src/Havok/: Helpers.cpp  HkaiTypes.cpp  HkcdTypes.cpp  Tagfile.cpp  Types.cpp
FirelinkCore/src/FirelinkFLVER/: CMakeLists.txt
FirelinkCore/src/FirelinkFLVER/include/FirelinkFLVER/: Bone.h  Dummy.h  (+11 more)
FirelinkCore/src/FirelinkFLVER/src/: Bone.cpp  Dummy.cpp  Encodings.cpp  FLVER.cpp  LayoutRepair.cpp  Material.cpp  MergedMesh.cpp  Mesh.cpp  TextureFinder.cpp  Version.cpp  VertexFormats.cpp
FirelinkCore/tests/: CMakeLists.txt
FirelinkCore/tests/FirelinkCore/: CMakeLists.txt  test_Binder.cpp  test_DCX.cpp  test_DDS.cpp  test_TPF.cpp
FirelinkCore/tests/FirelinkFLVER/: CMakeLists.txt  test_FLVER_read.cpp  test_FLVER_roundtrip.cpp  test_main.cpp
FirelinkCore/tests/resources/: c1200.tpf  m5020B2A10.flver  m5030B2A10.flver
FirelinkCore/tests/resources/dds/: c2030_BD_m.dds  c2030_BD_n.dds  c2030_Skin_3m.dds  c2230_WP_A_0653.dds  c2230_WP_A_0653_n.dds  c2230_WP_A_0653_s.dds
FirelinkDSR/: CMakeLists.txt
FirelinkDSR/include/FirelinkDSR/: DSREnums.h  DSRHook.h  DSROffsets.h  DSRPlayer.h  Export.h
FirelinkDSR/src/: CMakeLists.txt  DSRHook.cpp  DSRPlayer.cpp
FirelinkDSR/src/FirelinkDSRHook/: CMakeLists.txt  DSRHook.cpp  DSRHook.h  DSRPlayer.cpp  DSRPlayer.h
FirelinkDSR/src/FirelinkDSRHook/src/: DSRHook.cpp  DSRPlayer.cpp
FirelinkER/: CMakeLists.txt
FirelinkER/include/FirelinkER/: ERHook.h  EROffsets.h  Export.h
FirelinkER/pybind/: CMakeLists.txt
FirelinkER/pybind/FirelinkERMaps/: CMakeLists.txt  pyrelink_er_maps.cpp  pyrelink_er_maps.pyi
FirelinkER/src/: CMakeLists.txt  ERHook.cpp
FirelinkER/src/FirelinkERHook/: CMakeLists.txt  ERHook.h
FirelinkER/src/FirelinkERHook/src/: ERHook.cpp
FirelinkER/src/FirelinkERMaps/: CMakeLists.txt
FirelinkER/src/FirelinkERMaps/MapStudio/: Entry.cpp  Entry.h  EntryParam.cpp  EntryParam.h  EntryReference.cpp  Enums.h  Event.cpp  Event.h  EventParam.h  Layer.h  LayerParam.h  MSB.cpp  MSBFormatError.h  Model.cpp  Model.h  Part.cpp  Part.h  Region.cpp  Region.h  RegionParam.h  Route.cpp  Shape.cpp
FirelinkER/src/FirelinkERMaps/src/: Navmesh.cpp
FirelinkER/src/Maps/MapStudio/: Entry.cpp  EntryParam.cpp  EntryReference.cpp  Event.cpp  MSB.cpp  Model.cpp  Part.cpp  Region.cpp  Route.cpp  Shape.cpp
FirelinkER/tests/: CMakeLists.txt
FirelinkER/tests/FirelinkERMaps/: CMakeLists.txt  test_er_msb.cpp  test_er_msb.py
GrimHookCore/: CMakeLists.txt
GrimHookCore/include/GrimHook/: BaseHook.h  BinaryReadWrite.h  BinaryValidation.h  Collections.h  Export.h  Logging.h  MemoryUtils.h  Pointer.h  Process.h
GrimHookCore/src/: dllmain.cpp  pch.h
GrimHookCore/src/GrimHook/: BaseHook.cpp  BinaryReadWrite.cpp  Collections.cpp  Logging.cpp  MemoryReadWrite.cpp  MemoryUtils.cpp  Pointer.cpp  Process.cpp
GrimHookCore/src/private/: MemoryReadWrite.h
GrimHookDSR/: CMakeLists.txt
GrimHookDSR/include/GrimHookDSR/: DSREnums.h  DSRHook.h  DSROffsets.h  Export.h
GrimHookDSR/src/: DSRHook.cpp
GrimHookER/: CMakeLists.txt
GrimHookER/include/GrimHookER/: ERHook.h  Export.h
GrimHookER/src/: ERHook.cpp
GrimHookER/src/Maps/MapStudio/: Entry.cpp  EntryParam.cpp  EntryReference.cpp  Event.cpp  MSB.cpp  Model.cpp  Part.cpp  Region.cpp  Route.cpp  Shape.cpp
app/EldenRingNavmeshDev/: CMakeLists.txt  main.cpp  n10_01_00_00_001700.hkx
python/pybind/FirelinkCore/: CMakeLists.txt  pyrelink_core.cpp  pyrelink_core_binder.cpp  pyrelink_core_dcx.cpp  pyrelink_core_dds.cpp  pyrelink_core_tpf.cpp
python/pybind/FirelinkFLVER/: CMakeLists.txt  pyrelink_flver.cpp  pyrelink_texture_finder.cpp
tests/: CMakeLists.txt  er_msb_test.cpp  log_test.cpp  logtest.cpp
tests/FirelinkCore/: CMakeLists.txt
tests/FirelinkCore/FirelinkCore/: BinaryReadWriteTest.cpp  BinderTest.cpp  CMakeLists.txt  DCXTest.cpp  DDSTest.cpp  FirelinkCoreTestHelpers.h  TPFTest.cpp  test_Binder.cpp  test_DCX.cpp  test_DDS.cpp  test_ImageImportManager.cpp  test_Logging.cpp  test_TPF.cpp
tests/FirelinkCore/FirelinkFLVER/: CMakeLists.txt  FLVER0Test.cpp  FLVER2Test.cpp  TextureFinderTest.cpp  VertexFormatsTest.cpp  test_FLVER_read.cpp  test_FLVER_roundtrip.cpp  test_VertexFormats.cpp
tests/FirelinkER/: CMakeLists.txt
tests/FirelinkER/FirelinkERMaps/: CMakeLists.txt  EldenRingMSBTest.cpp  EldenRingNavmeshTest.cpp  test_er_msb.cpp
tests/FirelinkTestHelpers/: CMakeLists.txt
tests/FirelinkTestHelpers/include/: FirelinkTestHelpers.h
(+101 files in other folders)
